# patinator

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  runner.rs  types.rs
src/tests/: mod.rs
