[package]
name = "patinator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
indicatif = { version = "0.17", features = ["tokio"] }
tokio-stream = "0.1"
futures-util = "0.3"
mockall = "0.11"
async-trait = "0.1"
wiremock = "0.5"
tempfile = "3.8"
